@@ -1,6 +1,10 @@
+html {
+	overflow: hidden;
+}
+
 body {
-background: url(chrome://compzilla/skin/desktop-background.jpg);
-margin: 0px;
+	background: url(chrome://compzilla/skin/desktop-background.jpg);
+	margin: 0px;
 }
 
 .window {
@@ -8,7 +12,6 @@ margin: 0px;
 	width: 10px;
 	height: 10px;
 	background: #777777;
-	opacity: 0.8;
 }
 
 .titlebar {
