@@ -1,6 +1,8 @@
+<html>
 <head>
 	<link type="text/css" href="chrome://compzilla/skin/compzilla.css" rel="stylesheet" />
 </head>
 
 <body>
 </body>
+</html>
